# libdiscord

./: .gitignore  CMakeLists.txt  discordConfig.cmake.in
example_bots/: example-counter.c  example-hash.c  example-ping.c  example-simplepost.c
include/libdiscord/: REST.h  json.h  libdiscord.h  libdiscord_config.h  log.h
lib/: REST.c  json.c  libdiscord.c  log.c
